/*
 * We have settled on 'asset' as being the fundamental type we will record events for. The device enrolment api, enrols a device which is considered a kind of asset. There are other kinds, not all of which are physical, or 'atomic'.
 * The 'Thing' in Internet of Things does not conform nicely to a single simple type of device...consider a micro controller, where device ID, firmware, and device are all a coherent tightly-coupled whole, vs a car which includes multiple chips, IDs, ECU firmwares and so on.  We need to settle on 'asset' as the thing that a company consciously buys and uses day-to-day, and then deal with inner complexity or differences later.
 * Further, not all 'assets' are a 'device' in the traditional sense - what about a software module for a PLC?  What about a valve?
 */
syntax = "proto3";
// Contains the generated protocol definitions for the registration protocol.
// Registrar clients, service proxies and the archivist service will all use
// these.
// Maintainers, please refer to the style guide here:
//     https://developers.google.com/protocol-buffers/docs/style
package archivist.v2;
option go_package="github.com/rkvst/go-rkvstcommon-api-gen/assets/v2/assets;assets";

import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";

import "assets/v2/assets/enums.proto";
import "assets/v2/assets/principal.proto";
import "attribute/v2/attribute/attribute.proto";

/* The full set of properties common to all assets. Note that some of these properies are synthesized by the system. Individual apis will clarify which properties the accept and require. Assets may have one or more representative images. Those will be included in the attachments list. The label for those attachements is up to the UI
 * Note that there is no PATCH or PUT for assets as they are immutable and "changes" are merely aggregated events on the identified asset, therefore mutable fields; display_name, extended_attributes, type_attributes, tracked and attachments, will each require an Event to change (see Events below).
 */
message AssetResponse {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
            description: "This describes RKVST Asset."
        }
        example:"{ "
            "\"identity\": \"assets/add30235-1424-4fda-840a-d5ef82c4c96f\", "
            "\"behaviours\": [\"RecordEvidence\"], "
            "\"attributes\": { "
            "   \"arc_firmware_version\": \"3.2.1\", "
            "   \"arc_attachments\": ["
            "       {"
            "           \"arc_attachment_identity\": \"blobs/1754b920-cf20-4d7e-9d36-9ed7d479744d\","
            "           \"arc_hash_value\": \"01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b\","
            "           \"arc_display_name\": \"Picture from yesterday\","
            "           \"arc_hash_alg\": \"sha256\""
            "       }"
            "   ],"
            "   \"arc_home_location_identity\": \"locations/42054f10-9952-4c10-a082-9fd0d10295ae\""
            "}, "
            "\"confirmation_status\": \"PENDING\", "
            "\"tracked\": \"TRACKED\", "
            "\"owner\": \"0x601f5A7D3e6dcB55e87bf2F17bC8A27AaCD3511\","
            "\"at_time\": \"2019-11-27T14:44:19Z\","
            "\"proof_mechanism\": \"SIMPLE_HASH\","
            "\"public\": false,"
            "\"tenant_identity\": \"tenant/8e0b600c-8234-43e4-860c-e95bdcd695a9\" "
            "}"
    };

    // asset identity
    string identity = 1 [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "relative resource address `assets/{UUID}`"
        read_only: true
    }];

    // list of enabled behaviours
    repeated string behaviours = 2 [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "list of behaviours enabled for this asset"
    }];

    // all the assets attributes
    map<string, Attribute> attributes = 3 [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "key value mapping of asset properties"
    }];

    // indicated if asset has been committed to the blockchain, possible values are CONFIRMED for committed, PENDING for not yet committed or FAILED for permanent failure
    ConfirmationStatus confirmation_status = 4 [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "indicates if the asset has been succesfully committed to the blockchain"
        read_only: true
        // see https://github.com/grpc-ecosystem/grpc-gateway/blob/master/protoc-gen-openapiv2/options/openapiv2.proto
        //  for specific types.
        type: STRING
    }];

    // indicates if asset is being tracked in the system TRACKED or NOT_TRACKED
    TrackedStatus tracked = 5 [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "indicates whether asset is still being tracked in the system"
        read_only: true
        // see https://github.com/grpc-ecosystem/grpc-gateway/blob/master/protoc-gen-openapiv2/options/openapiv2.proto
        //  for specific types.
        type: STRING
    }];

    // describes the access policy for this asset
    map<string, Attribute> access_policy = 6 [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "key value mapping of behaviour to private for keys"
    }];

    // wallet address for the owner of this asset
    string owner = 7 [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "wallet address of the asset owner"
        read_only: true
    }];

    google.protobuf.Timestamp at_time = 8 [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "indicates time the asset data is from"
        read_only: true
    }];

    // XXX: #4483 DEPRECATED use proof_mechanism
    StorageIntegrity storage_integrity = 9 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "DEPRECATED use proof_mechanism"
            // see https://github.com/grpc-ecosystem/grpc-gateway/blob/master/protoc-gen-openapiv2/options/openapiv2.proto
            //  for specific types.
            type: STRING
        }
    ];

    ProofMechanism proof_mechanism = 10 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "the mechanism used to provide evidential proof"
            // see https://github.com/grpc-ecosystem/grpc-gateway/blob/master/protoc-gen-openapiv2/options/openapiv2.proto
            //  for specific types.
            type: STRING
        }
    ];

    string chain_id = 11 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "chain id of the blockchain associated with this asset"
            read_only: true
        }
    ];

    bool public = 12 [
        (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
            description: "Public asset"
        }
    ];

    string tenant_identity = 13 [ (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description:
        "Identity of the tenant the that created this asset"
        max_length: 1024
    }];

}